--- a/package.json
+++ b/package.json
@@ -5,15 +5,14 @@
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest",
-    "postinstall": "jetifier -r"
+    "postinstall": "yarn jetify"
   },
   "dependencies": {
     "react": "16.8.3",
     "react-native": "0.59.9",
     "react-native-gesture-handler": "^1.5.3",
     "react-native-reanimated": "^1.7.0",
-    "react-native-safe-area-context": "^0.6.2",
-    "react-native-screens": "^2.0.0-alpha.29"
+    "react-native-tab-view": "^2.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.3",
