--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "postinstall": "yarn jetify"
   },
   "dependencies": {
+    "@react-native-community/cameraroll": "^1.3.1",
     "react": "16.8.3",
     "react-native": "0.59.9",
+    "react-native-camera-roll-picker": "^2.0.0",
     "react-native-gesture-handler": "^1.5.3",
     "react-native-reanimated": "^1.7.0",
     "react-native-tab-view": "^2.11.0"
