--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-native-gesture-handler": "^1.5.3",
     "react-native-image-pan-zoom": "^2.1.11",
     "react-native-reanimated": "^1.7.0",
-    "react-native-tab-view": "^2.11.0"
+    "react-native-tab-view": "^2.11.0",
+    "react-native-video": "^5.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.8.3",
