--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native-image-pan-zoom": "^2.1.11",
     "react-native-reanimated": "^1.7.0",
     "react-native-tab-view": "^2.11.0",
+    "react-native-vector-icons": "^6.6.0",
     "react-native-video": "^5.0.2"
   },
   "devDependencies": {
