--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -138,6 +138,7 @@ android {
 }
 
 dependencies {
+    implementation project(':@react-native-community_image-editor')
     implementation project(':react-native-vector-icons')
     implementation project(':react-native-video')
     implementation project(':@react-native-community_cameraroll')
