--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-native-community/image-editor": "^2.2.0",
     "react": "16.8.3",
     "react-native": "0.59.9",
+    "react-native-camera": "git+https://git@github.com/react-native-community/react-native-camera.git",
     "react-native-gesture-handler": "^1.5.3",
     "react-native-image-pan-zoom": "^2.1.11",
     "react-native-reanimated": "^1.7.0",
