--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -139,7 +139,13 @@ android {
 }
 
 dependencies {
-    implementation project(':react-native-camera')
+    implementation (project(':react-native-camera')) {
+        exclude group: "com.google.android.gms"
+        implementation 'com.android.support:exifinterface:27.+'
+        implementation ('com.google.android.gms:play-services-vision:17.0.2') {
+            force = true
+        }
+    }
     implementation project(':@react-native-community_image-editor')
     implementation project(':react-native-vector-icons')
     implementation project(':react-native-video')
