--- a/package.json
+++ b/package.json
@@ -5,20 +5,26 @@
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest",
-    "postinstall": "yarn jetify"
+    "postinstall": "jetifier -r",
+    "android": "react-native run-android"
   },
   "dependencies": {
     "@react-native-community/cameraroll": "^1.3.1",
     "@react-native-community/image-editor": "^2.2.0",
+    "@react-native-community/masked-view": "^0.1.6",
+    "postinstall": "^0.7.0",
     "react": "16.8.3",
     "react-native": "0.59.9",
     "react-native-camera": "git+https://git@github.com/react-native-community/react-native-camera.git",
     "react-native-gesture-handler": "^1.5.3",
     "react-native-image-pan-zoom": "^2.1.11",
     "react-native-reanimated": "^1.7.0",
+    "react-native-safe-area-context": "^0.7.2",
+    "react-native-screens": "^2.0.0-beta.2",
     "react-native-tab-view": "^2.11.0",
     "react-native-vector-icons": "^6.6.0",
-    "react-native-video": "^5.0.2"
+    "react-native-video": "^5.0.2",
+    "react-navigation": "3.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.3",
